# niva

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_indices_cache.py  0003_weather_cache.py
backend/app/: insights.py  main.py
backend/app/ai/: service.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  security.py
backend/app/core/: config.py  db.py
backend/app/fields/: models.py  router.py  schemas.py  service.py
backend/app/sentinel/: cache.py  models.py  service.py
backend/app/stats/: router.py
backend/app/weather/: cache.py  models.py  service.py
backend/app/yield_pred/: baseline.csv  service.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/public/locales/de/: translation.json
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx
frontend/src/api/: auth.ts  fields.ts  insights.ts  stats.ts
frontend/src/components/: ConfidenceBadge.tsx  CropIcon.tsx  EditFieldModal.tsx  FieldCardMenu.tsx  FieldMapView.tsx  HealthBadge.tsx  LanguageSelect.tsx  NDVIColorScale.tsx  Onboarding.tsx  Sparkline.tsx
frontend/src/lib/: apiErrors.ts  axios.ts  i18n.ts  languages.ts  mapPreview.ts  ndvi.ts  utils.ts
frontend/src/pages/: Landing.tsx
frontend/src/routes/: PrivateRoute.tsx  PublicRoute.tsx  index.tsx
frontend/src/stores/: authStore.ts  uiStore.ts
frontend/src/types/: index.ts
(+28 files in other folders)
